// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<ContactBookEdit /> renders correctly the component 1`] = `
<DocumentFragment>
  <div
    class="d-flex flex-column align-items-center"
  >
    <h2
      class="mb-4"
      data-testid="contact-book-edit-title"
    >
      contactBooksEdit.title
    </h2>
    <div
      class="form card"
    >
      <div
        class="card-body"
      >
        <form
          class=""
          data-testid="contact-book-form"
        >
          <div
            class="mb-3"
          >
            <label
              class="form-label"
            >
              contactBooksEdit.name
            </label>
            <input
              class="form-control"
              maxlength="20"
              minlength="4"
              placeholder="contactBooksEdit.name"
              required=""
              type="text"
              value="test"
            />
          </div>
          <div
            class="d-flex justify-content-between"
          >
            <button
              class="w-100 btn btn-secondary"
              data-testid="contact-book-back-btn"
              type="button"
            >
              contactBooksEdit.back
            </button>
            <button
              class="w-100 ms-2 btn btn-primary"
              type="submit"
            >
              contactBooksEdit.submit
            </button>
          </div>
        </form>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`<ContactBookEdit /> submit form calls editContactBook correctly and set errors: errors 1`] = `
<DocumentFragment>
  <div
    class="d-flex flex-column align-items-center"
  >
    <h2
      class="mb-4"
      data-testid="contact-book-edit-title"
    >
      contactBooksEdit.title
    </h2>
    <div
      class="form card"
    >
      <div
        class="card-body"
      >
        <form
          class=""
          data-testid="contact-book-form"
        >
          <div
            class="mb-3"
          >
            <label
              class="form-label"
            >
              contactBooksEdit.name
            </label>
            <input
              class="form-control"
              maxlength="20"
              minlength="4"
              placeholder="contactBooksEdit.name"
              required=""
              type="text"
              value="test"
            />
            <div
              class="text-danger mt-2 mb-0"
              data-testid="error-box-name"
            >
              <span>
                errors.name
              </span>
            </div>
          </div>
          <div
            class="d-flex justify-content-between"
          >
            <button
              class="w-100 btn btn-secondary"
              data-testid="contact-book-back-btn"
              type="button"
            >
              contactBooksEdit.back
            </button>
            <button
              class="w-100 ms-2 btn btn-primary"
              type="submit"
            >
              contactBooksEdit.submit
            </button>
          </div>
        </form>
      </div>
    </div>
  </div>
</DocumentFragment>
`;
